force-app/main/default/objects/Key_Business_Goal_and_Strategy__c/Key_Business_Goal_and_Strategy__c.object-meta.xml
<CustomObject>
    <label>Key Business Goal &amp; Strategy</label>
    <nameField>
        <displayFormat>GS-{0000}</displayFormat>
        <label>Goal/Strategy #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Business Goals &amp; Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>