force-app/main/default/objects/Key_Business_Goal_and_Strategy__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>Used to document the key business goals for a strategic account</description>
    <label>Goal</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>