force-app/main/default/objects/Key_Business_Goal_and_Strategy__c/fields/Strategic_Account_Profile__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Account Profile</label>
    <referenceTo>Strategic_Account_Profile__c</referenceTo>
    <relationshipName>Key_Business_Goal_and_Strategy</relationshipName>
    <type>Lookup</type>
</CustomField>