force-app/main/default/objects/Key_Business_Goal_and_Strategy__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <description>Used to identify the strategy to achieve the goal for a strategic account.</description>
    <label>Strategy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>